fixed letter spacing

--- a/index.css
+++ b/index.css
@@ -138,7 +138,7 @@ header p {
   padding: 10px;
   overflow: hidden;
   font-size: 12.5px;
-
+  letter-spacing: 0.4px;
 }
 
 
